# payroll-app

./: AGENTS.md
backend/: .gitignore  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 01_db18d4801ce3_create_businesses_tables.py  02_c457994b11cf_create_holidays_table.py  02_ef20973af35e_create_holidays_table.py  03_2c120e249b8c_update_employees_table.py  03_2c1bc82dd3f8_create_employees_table.py  04_7fda5131247d_create_attendances_table.py  04_f0412173ff62_add_attendance_table.py  05_3002c75f04c9_add_salary_basis_columns_in_business_.py  06_fb171256f079_add_payroll_tables.py  d83358423006_create_business_tables.py
backend/app/: main.py
backend/app/attendance/application/: commands.py  ports.py  use_cases.py
backend/app/attendance/domain/: entities.py  exceptions.py
backend/app/attendance/infrastructure/: orm.py  repository.py
backend/app/attendance/presentation/: dependencies.py  exception_handler.py  router.py  schemas.py
backend/app/attendances/application/: commands.py  ports.py  use_cases.py
backend/app/core/: config.py  db.py  dependencies.py  exception_handler.py  uow.py
backend/app/shared/: value_objects.py
backend/tests/: conftest.py  docker-compose.yml
backend/tests/integration/: conftest.py  test__attendance_router.py  test__attendance_sqlalchemy.py  test__business_router.py  test__business_sqlalchemy.py  test__employees_router.py  test__employees_sqlalchemy.py  test__holidays_router.py  test__holidays_sqlalchemy.py  test__payroll_router.py  test__payroll_sqlalchemy.py
(+89 files in other folders)
